syntax = "proto3";

option csharp_namespace = "AppStatisticApi.Grpc";

package AppStatisticLoader;

service AppStatisticLoader {
	rpc getStatistic (AppRequest) returns (AppReply);
}

message AppRequest {
	int32 id = 1;
}

message AppReply {
	string error = 1;
	string name = 2;
	string downloads = 3;
}
